# educational-repository

./: README.md
InsuranceCardsApp/: insurance_app  main.cpp
InsuranceCardsApp/include/: insurance_card.h  insurance_manager.h
InsuranceCardsApp/src/: formatter_output.cpp  insurance_card.cpp  insurance_manager.cpp
InsuranceCardsWidgetsApp/build-untitled2-Desktop-Debug/: cmake_install.cmake  untitled2
InsuranceCardsWidgetsApp/build-untitled2-Desktop-Debug/untitled2_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
InsuranceCardsWidgetsApp/untitled2/: CMakeLists.txt  ChartDialog.cpp  ChartDialog.h  ChartDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
fundamentals-of-software-engineering/lab_02_01_01/: main  main.cpp
fundamentals-of-software-engineering/lab_02_01_03/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
high-level-programming/: README.md
high-level-programming/hw_02_01_01/: sfml-app
high-level-programming/lab_02_01_01/: a.out  main.cpp  theory.md  запуск программы в терминале.txt
high-level-programming/lab_02_01_02/: main.cpp
high-level-programming/lab_02_01_02/Models/artist_class/: artist.h
high-level-programming/lab_02_01_02/Models/user_class/: user.h
high-level-programming/lab_02_01_03/: BMSTU_music_app  theory.md
high-level-programming/lab_02_01_03/Models/formatter_output_class/: foramatter_output.cpp
high-level-programming/lab_02_01_03/Models/music_manager_class/: music_manager.h
high-level-programming/lab_02_01_04/: BMSTU_music_app
high-level-programming/lab_02_02_03/Models/formatter_output_class/: formatter_output.h
high-level-programming/lab_02_02_04/Models/track_class/: track.h
high-level-programming/lab_02_03_05/: tests.h
high-level-programming/lab_02_03_05/Models/music_manager_class/: music_manager.cpp
high-level-programming/lab_02_03_05/Models/track_class/: track.cpp
high-level-programming/lab_02_03_05/Models/vector_class/: vector_class.h
high-level-programming/lab_02_03_06/: BMSTU_music_app
high-level-programming/lab_02_03_06/Interfaces/: IDisplayable.h
high-level-programming/lab_02_03_06/Models/music_manager_class/: music_manager.h
high-level-programming/test/: sfml-app
hw_02_01_01/: main.cpp  sfml-app
introductory-practice/: README.md
introductory-practice/InsuranceCardsApp/: build.sh  main.cpp
introductory-practice/InsuranceCardsApp/include/: formatter_input.h  insurance_card.h  insurance_manager.h
introductory-practice/InsuranceCardsApp/src/: formatter_input.cpp  formatter_output.cpp  insurance_card.cpp
introductory-practice/InsuranceCardsWidgetsApp/: 123  1234
introductory-practice/InsuranceCardsWidgetsApp /: Dataset.txt  Иванов Иван Иванович Петров.txt
introductory-practice/InsuranceCardsWidgetsApp /build-untitled2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
introductory-practice/InsuranceCardsWidgetsApp /build_release/: CMakeCache.txt  cmake_install.cmake
introductory-practice/InsuranceCardsWidgetsApp /untitled2/: CMakeLists.txt  ChartDialog.cpp  ChartDialog.h  chart_manager.cpp  chart_manager.h  chartdialog.cpp  chartdialog.h  file_manager.cpp  file_manager.h  filemanager.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  search_manager.cpp  search_manager.h  searchmanager.h  table_manager.cpp  table_manager.h  tablemanager.cpp
introductory-practice/InsuranceCardsWidgetsApp/build-untitled2-Desktop-Debug/: CMakeCache.txt.prev  Makefile
introductory-practice/InsuranceCardsWidgetsApp/build_release/: Makefile  untitled2
introductory-practice/InsuranceCardsWidgetsApp/untitled2/: CMakeLists.txt  ChartDialog.cpp  ChartDialog.h  chartmanager.cpp  chartmanager.h  customheaderview.h  filemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchmanager.cpp  searchmanager.h  tablemanager.cpp  tablemanager.h
introductory-practice/InsuranceCardsWidgetsAppQ5/build-untitled2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  untitled2
introductory-practice/InsuranceCardsWidgetsAppQ5/untitled2/: CMakeLists.txt  ChartDialog.cpp  ChartDialog.h  chartmanager.cpp  chartmanager.h  filemanager.cpp  mainwindow.ui  tablemanager.h
introductory-practice/InsuranceCardsWidgetsAppQ6/: Иванов Иван Иванович Петров.txt
lab_02_01_01/: a.out  main.cpp
lab_02_01_01/menu/: CMenu.cpp  CMenu.h  CMenuItem.h
lab_02_01_02/: BMSTU_music_app  build.sh  main.cpp  tests.h
lab_02_01_02/Menu/: menu_class.h  menu_item_class.h
lab_02_01_02/Models/consultation_class/: consultation_class.cpp  consultation_class.h
lab_02_01_02/Models/formatter_output_class/: foramatter_output.cpp
lab_02_01_02/Models/medic_class/: medic_class.cpp
lab_02_01_02/Models/music_manager_class/: music_manager.cpp  music_manager.h
lab_02_01_02/Models/outpatient_card_class/: outpatient_card_class.cpp  outpatient_card_class.h
lab_02_01_02/Models/patient_class/: patient_class.cpp
lab_02_01_02/Models/track_class/: track.cpp  track.h
lab_02_01_02/Models/user_class/: user_class.cpp  user_class.h
lab_02_01_03/: lab_02_01_03.sln  main.cpp  mainwindow.ui
lab_02_01_03/Models/artist_class/: artist.cpp
lab_02_01_03/Models/music_manager_class/: music_manager.cpp
lab_02_01_03/Models/track_class/: track.cpp
lab_02_01_04/Models/music_manager_class/: music_manager.cpp  music_manager.h
object-oriented-programming/: README.md
object-oriented-programming/hw_02_01_01/: Program.cs  hw_02_01_01.sln
object-oriented-programming/lab_02_01_01/: lab_02_01_01.sln
object-oriented-programming/lab_02_01_01/lab_02_01_01/: Program.cs  Task1.cs  Task2.cs  Task3.cs  Task4.cs  Task5.cs
object-oriented-programming/lab_02_01_02/: lab_02_01_02.sln
object-oriented-programming/lab_02_01_02/lab_02_01_02/: Program.cs
object-oriented-programming/lab_02_01_03/lab_02_01_03/: Program.cs  Task1.cs  Task2.cs  Task3.cs  Task4.cs  Task5.cs  Task6.cs
object-oriented-programming/lab_02_02_01/: lab_02_02_01.sln
object-oriented-programming/lab_02_02_01/lab_02_02_01/: Program.cs
object-oriented-programming/lab_02_02_02/: lab_02_02_02.sln
object-oriented-programming/lab_02_02_02/lab_02_02_02/: Program.cs
test/: main.cpp
(+52 files in other folders)
